# Pyxpp

./: README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: new-issue.md
pyxpp/: __init__.py  execute.py
pyxpp/cli/: __init__.py  cli.py  exceptions.py  validate.py
pyxpp/code_parser/: parser.py
pyxpp/parser/: __init__.py  parser.py
pyxpp/recognizer/: __init__.py  recognizer.py
tests/: test_parser.py  test_validators.py
tests/test_files/: code2.py
