[tool.poetry]
name = "pyxpp"
version = "0.1.0"
description = "Translator from a variety of Python language to a variety of C++ language"
authors = ["Oidaho <76991612+Oidaho@users.noreply.github.com>"]
license = "GPL-3.0 license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
