[tool.poetry]
name = "pyxpp"
version = "0.1.0"
description = "Translator from a variety of Python language to a variety of C++ language"
authors = ["Oidaho <oidaho.main@yandex.ru>"]
license = "GPL-3.0 license"
readme = "README.md"
packages = [{include = "pyxpp"}]

[tool.poetry.scripts]
pyxpp = "pyxpp.execute:main"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
